--- a/src/PanelPrincipal.form
+++ b/src/PanelPrincipal.form
@@ -34,7 +34,7 @@
           <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Consultar Proveedor"/>
+          <text value="Consultar, Modificar y Eliminar un  Proveedor"/>
         </properties>
       </component>
     </children>
