--- a/src/ConsultarProveedor.form
+++ b/src/ConsultarProveedor.form
@@ -303,7 +303,7 @@
       </grid>
       <scrollpane id="cbe2">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -328,6 +328,14 @@
         </constraints>
         <properties>
           <text value="salir"/>
+        </properties>
+      </component>
+      <component id="35da9" class="javax.swing.JButton" binding="exportarConsultaButton" default-binding="true">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Exportar consulta"/>
         </properties>
       </component>
     </children>
